ifc-macros/test/if_else_high_guard2.stderr
error: Cannot assign high expression to low variable
  --> $DIR/if_else_high_guard2.rs:7:9
   |
7  | /         let _c = if a == 5 {
8  | |             let x = 5;
9  | |             x
10 | |         } else {
11 | |             let x = 6;
12 | |             x
13 | |         };
   | |__________^
   |
help: Low Variable
  --> $DIR/if_else_high_guard2.rs:7:13
   |
7  |         let _c = if a == 5 {
   |             ^^
help: High Expression
  --> $DIR/if_else_high_guard2.rs:7:18
   |
7  |           let _c = if a == 5 {
   |  __________________^
8  | |             let x = 5;
9  | |             x
10 | |         } else {
11 | |             let x = 6;
12 | |             x
13 | |         };
   | |_________^
